<resources>
    <string name="app_name">Aldokter Grup 3</string>
    <string name="label_ubah">Ubah</string>
    <string name="label_ubah_data_saya">Ubah Data Saya</string>
    <string name="cd_back_button">Back Button</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="alamat">Alamat</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="laki_laki">Pria</string>
    <string name="perempuan">Wanita</string>
    <string name="data_saya">Data Saya</string>
    <string name="email">E-mail</string>
    <string name="masuk">MASUK</string>
    <string name="tv_masuk">Masuk</string>
    <string name="daftar">DAFTAR</string>
    <string name="laki">Pria</string>
    <string name="belum_punya_akun">Belum punya akun? <b>Daftar sekarang</b></string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi kata sandi</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="sign_in">Masuk dan mulai buat janji \ndengan dokter</string>
    <string name="sign_up">Daftar dan mulai buat janji \ndengan dokter</string>
    <string name="masikkan_kata_sandi_baru">Silahkan masukkan Kata sandi Baru untuk akun Anda</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="kata_sandi_lama">Kata sandi lama</string>
    <string name="kata_sandi_baru">Kata sandi baru</string>
    <string name="konfirmasi_kata_sandi_baru">Konfirmasi kata sandi baru</string>
    <string name="ubah">Ubah</string>
    <string name="simpan">Simpan</string>
    <string name="keluar">Keluar</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="akun">Akun</string>
    <string name="batal">Batal</string>
    <string name="konfirmasi_logout">Konfirmasi Logout</string>
    <string name="onboarding_article">Baca Artikel</string>
    <string name="onboarding_article_desc">Baca artikel terbaru seputar kesehatan dan cari artikel sesuai kata kunci.</string>
    <string name="onboarding_booking">Buat Janji</string>
    <string name="onboarding_booking_desc">Buat janji dengan dokter di sekitarmu dan pilih jadwal konsultasi.</string>
    <string name="onboarding_consultation">Mulai Konsultasi</string>
    <string name="onboarding_consultation_desc">Lakukan konsultasi dengan dokter pilihanmu</string>
    <string name="onboarding_button_next">Selanjutnya</string>
    <string name="onboarding_button_start">Mulai</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_article">Artikel</string>
    <string name="title_booking">Buat Janji</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_forgot_password">Lupa kata sandi</string>
    <string name="title_check_your_email">Email berhasil dikirim</string>
    <string name="title_check_your_email_desc">Kami telah mengirimkan link reset password ke email kamu</string>
    <string name="title_profile">Profil</string>
    <string name="forgot_pass_button_send_email">Kirim Email</string>
    <string name="forgot_pass_message_otp_delivered">Email OTP berhasil terkirim</string>
    <string name="forgot_pass_message_email_not_found">Email tidak terdaftar</string>
    <string name="forgot_pass_otp_desc">Masukkan kode OTP yang telah dikirim pada email kamu</string>
    <string name="forgot_pass_otp_resend_timer">Mohon tunggu dalam <b>%1$d</b> detik untuk kirim ulang</string>
    <string name="forgot_pass_otp_resend"><u>Kirim ulang kode OTP</u></string>
    <string name="forgot_pass_button_verify_otp">Verifikasi Kode OTP</string>
    <string name="forgot_pass_error_invalid_email">Format email salah</string>
    <string name="forgot_pass_error_empty_email">Alamat email tidak boleh kosong</string>
    <string name="forgot_pass_error_confirmation_mismatch">Konfirmasi kata sandi tidak sesuai</string>
    <string name="profile_logout_confirmation_message">Apakah kamu yakin ingin keluar dari aplikasi?</string>
    <string name="get_location_request_message">Aktifkan lokasi perangkat untuk pengalaman yang
        lebih baik. Lokasi akan diakses menggunakan Google location service</string>
    <string name="ok_button">OK</string>
    <string name="manual_activation_button">Aktifkan Manual</string>
    <string name="cd_foto_profil">Foto Profil</string>
    <string name="cd_foto_dokter">Foto Dokter</string>
    <string name="example_article_title">Sederet Fakta tentang Obat Herbal Hernia</string>
    <string name="example_article_category">Kesehatan</string>
    <string name="title_detail_article">Detail Artikel</string>
    <string name="title_daftar">Daftar</string>
    <string name="title_profil_dokter">Profil Dokter</string>
    <string name="title_alert_login">Masuk untuk melanjutkan\nproses buat janji</string>
    <string name="title_alert_login_at_profile">Masuk untuk melihat fitur selengkapnya</string>
    <string name="nanti">Nanti</string>
    <string name="jasa_konsultasi">Jasa konsultasi: Rp. %1$d</string>
    <string name="doctor_distance">%1$d Km</string>
    <string name="title_choose_date">Pilih Jadwal</string>
    <string name="title_fill_data">Isi Data Pasien</string>
    <string name="title_confirmation_data">Konfirmasi Data</string>
    <string name="text_chosen_doctor">Dokter Pilihan Anda</string>
    <string name="image_doctor_face">Image Doctor Face</string>
    <string name="text_doctor_name">Dr. Budi</string>
    <string name="text_doctor_specialist">Spesialis Tulang</string>
    <string name="text_helper_practice_location">Lokasi Praktik</string>
    <string name="text_practice_location">Rs. Siloam</string>
    <string name="text_next">selanjutnya</string>
    <string name="text_helper_choose_practice_date">Pilih tanggal praktik</string>
    <string name="text_choose_practice_date">10/20/2021</string>
    <string name="text_helper_practice_hour">Pilih jam praktik</string>
    <string name="image_choose_date">Image Choose Date</string>
    <string name="text_target_booking">Pesan Untuk</string>
    <string name="text_patient_self">Diri Sendiri</string>
    <string name="text_patient_family">Anggota Keluarga/Orang lain</string>
    <string name="text_helper_check_status">Apakah pasien sudah pernah berobat di Rumah Sakit ini ?</string>
    <string name="text_ever_been">Sudah Pernah</string>
    <string name="text_not_yet">Belum Pernah</string>
    <string name="text_patient_data">Data Pasien</string>
    <string name="text_patient_name">Value Nama Lengkap</string>
    <string name="text_helper_patient_phone">Nomor Ponsel</string>
    <string name="text_patient_phone">Value Nomor Ponsel</string>
    <string name="text_patient_birth_date">Value Tanggal Lahir</string>
    <string name="text_patient_gender">Value Jenis Kelamin</string>
    <string name="text_patient_identity_card">Value Nomor KTP</string>
    <string name="text_patient_address">Value Alamat</string>
    <string name="text_make_promise">Buat Janji</string>
    <string name="message_password_blank_error">Password tidak boleh kosong</string>
    <string name="message_reset_success">Kata sandi berhasil diperbaharui</string>
    <string name="header_api">Bearer %1$s</string>
    <string name="progress_title">Harap Tunggu …</string>
    <string name="response_success">success</string>
    <string name="response_error">Error Please Try Again</string>
    <string name="response_error_id">Error, Harap Coba Lagi!</string>
    <string name="button_try_again">Coba lagi</string>
    <string name="response_login_error">Email atau kata sandi salah</string>
    <string name="response_change_password_error">Kata sandi lama tidak sesuai</string>
    <string name="password_change_succes">Kata sandi kamu berhasil diubah</string>
    <string name="response_sign_up_error">Gagal Daftar, isi data yang benar</string>
    <string name="toast_login_success">Anda telah berhasil masuk</string>
    <string name="message_password_less_than_six">Kata sandi tidak boleh kurang dari 6 karakter</string>
    <string name="message_password_doesnt_match">Konfirmasi kata sandi tidak sesuai</string>
    <string name="message_fix_input_data">Harap perbaiki data yang dimasukkan</string>
    <string name="message_update_data_success">Data berhasil diperbarui</string>
    <string name="tab_text_current">Terkini</string>
    <string name="tab_text_history">Riwayat</string>
    <string name="text_detail_booking">Detail Janji</string>
    <string name="text_location_and_time">Lokasi dan waktu</string>
    <string name="text_booking_date_time">Senin, 06 Desember 2021 15:00</string>
    <string name="title_list_booking_toolbar">Janji Saya</string>
    <string name="image_user">Image User</string>
    <string name="booking_success">Buat Janji Berhasil</string>
    <string name="booking_success_desc">Terima kasih telah melakukan buat janji dengan dokter</string>
    <string name="button_back">Kembali</string>
    <string name="message_alert_cannot_use_back_button">Tolong tekan tombol kembali</string>
    <string name="text_article_not_found">Artikel tidak ditemukan</string>
    <string name="reset_password">Reset Kata Sandi</string>
    <string name="text_title_article">Judul Artikel</string>
    <string name="image_content_article">Image Content Article</string>
    <string name="text_reviewer">Ditinjau oleh :</string>
    <string name="text_value_reviewer">Value Reviewer</string>
    <string name="text_updated_date">Terakhir diperbarui :</string>
    <string name="text_value_updated_date">Value Updated Date</string>
    <string name="text_try_again">Try Again</string>
    <string name="search_article_hint">Cari Artikel</string>
    <string name="successful_registration">Daftar berhasil, silahkan masuk dengan akun baru kamu</string>
    <string name="title_register">Daftar</string>
    <string name="invalid_phone_number_error">Format nomor telepon tidak valid</string>
    <string name="invalid_id_number_error">Nomor KTP tidak boleh kurang dari 16 karakter</string>
    <string name="reset_password_description">Masukkan alamat email akun, kami akan mengirimkan email berisi link untuk reset kata sandi</string>
    <string name="open_email">Buka Email</string>
    <string name="kembali_ke_halaman_sign_in">Skip, reset nanti</string>
    <string name="location_service_not_enabled">Service lokasi tidak diaktifkan</string>
    <string-array name="category_array">
        <item>Hidup Sehat</item>
        <item>Keluarga</item>
        <item>Kesehatan</item>
    </string-array>
</resources>