<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.booking.confirmation.ConfirmationDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_27">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="6dp"
            app:strokeColor="@color/grey_outline_border"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_bg_layout_white_rounded"
                android:paddingHorizontal="@dimen/spacing_8"
                android:paddingTop="@dimen/spacing_4"
                android:paddingBottom="@dimen/spacing_10">

                <TextView
                    android:id="@+id/tv_chosen_doctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_chosen_doctor"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_doctor"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/spacing_6"
                    android:contentDescription="@string/image_doctor_face"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_chosen_doctor" />

                <TextView
                    android:id="@+id/tv_doctor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_6"
                    android:layout_marginTop="@dimen/spacing_6"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/text_doctor_name"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@id/iv_doctor"
                    app:layout_constraintTop_toTopOf="@id/iv_doctor" />

                <TextView
                    android:id="@+id/tv_doctor_specialist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_6"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_doctor_specialist"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/tv_doctor_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_doctor_name" />

                <TextView
                    android:id="@+id/tv_choosen_clinic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_6"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_helper_practice_location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_13"
                    app:layout_constraintStart_toStartOf="@id/iv_doctor"
                    app:layout_constraintTop_toBottomOf="@id/iv_doctor" />

                <TextView
                    android:id="@+id/tv_doctor_clinic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_6"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_practice_location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_13"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_choosen_clinic" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_15"
            app:cardCornerRadius="4dp"
            app:cardElevation="6dp"
            app:strokeColor="@color/grey_outline_border"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_bg_layout_white_rounded"
                android:orientation="vertical"
                android:paddingStart="@dimen/spacing_7"
                android:paddingTop="@dimen/spacing_5"
                android:paddingEnd="@dimen/spacing_14"
                android:paddingBottom="@dimen/spacing_45">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_patient_data"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_19"
                    android:fontFamily="@font/lato"
                    android:text="@string/nama_lengkap"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_patient_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_patient_name"
                    android:textColor="@color/grey_outline_border"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_helper_patient_phone"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_patient_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_patient_phone"
                    android:textColor="@color/grey_outline_border"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:fontFamily="@font/lato"
                    android:text="@string/tanggal_lahir"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_patient_birth_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_patient_birth_date"
                    android:textColor="@color/grey_outline_border"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:fontFamily="@font/lato"
                    android:text="@string/jenis_kelamin"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_patient_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_patient_gender"
                    android:textColor="@color/grey_outline_border"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:fontFamily="@font/lato"
                    android:text="@string/nomor_ktp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_patient_identity_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_patient_identity_card"
                    android:textColor="@color/grey_outline_border"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:fontFamily="@font/lato"
                    android:text="@string/alamat"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_patient_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:fontFamily="@font/lato"
                    android:text="@string/text_patient_address"
                    android:textColor="@color/grey_outline_border"
                    android:textSize="14sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_make_promise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_16"
            android:backgroundTint="@color/color_accent"
            android:text="@string/text_make_promise" />
    </LinearLayout>

</ScrollView>