<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_40"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/font_24"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_40"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_nama_lengkap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_20"
        android:text="@string/nama_lengkap"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up" />

    <EditText
        android:id="@+id/et_nama_lengkap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_6"
        android:layout_marginRight="@dimen/spacing_40"
        android:background="@drawable/ic_bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_lengkap" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_20"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nama_lengkap" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_6"
        android:layout_marginRight="@dimen/spacing_40"
        android:background="@drawable/ic_bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_jenis_kelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_20"
        android:text="@string/jenis_kelamin"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <RadioGroup
        android:id="@+id/rg_jenis_kelamin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/spacing_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jenis_kelamin">

        <RadioButton
            android:id="@+id/radio_pirates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laki" />

        <RadioButton
            android:id="@+id/radio_ninjas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perempuan" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_kata_sandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_20"
        android:text="@string/kata_sandi"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_jenis_kelamin" />

    <EditText
        android:id="@+id/et_kata_sandi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_40"
        android:layout_marginRight="@dimen/spacing_40"
        android:background="@drawable/ic_bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_kata_sandi" />

    <TextView
        android:id="@+id/tv_konfirmasi_kata_sandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_20"
        android:text="@string/konfirmasi_kata_sandi"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_kata_sandi" />

    <EditText
        android:id="@+id/et_konfirmasi_kata_sandi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_6"
        android:layout_marginRight="@dimen/spacing_40"
        android:background="@drawable/ic_bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_konfirmasi_kata_sandi" />

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="@dimen/spacing_20"
        android:layout_marginRight="@dimen/spacing_40"
        android:backgroundTint="@color/color_primary"
        android:text="@string/daftar"
        app:layout_constraintTop_toBottomOf="@+id/et_konfirmasi_kata_sandi" />


</androidx.constraintlayout.widget.ConstraintLayout>